--- a/app/src/main/res/layout/activity_pay.xml
+++ b/app/src/main/res/layout/activity_pay.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -13,8 +13,11 @@
         android:layout_height="wrap_content"
         android:text="Google Pay"
         android:id="@+id/gpaybtn"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="300dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintVertical_bias="0.4"
         android:background="@drawable/rectangle"
         android:textColor="#FF8330"
         />
@@ -23,9 +26,10 @@
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:text="Paytm"
-        android:layout_below="@id/gpaybtn"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="20dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         android:id="@+id/paytmbtn"
         android:background="@drawable/rectangle"
         />
@@ -35,9 +39,11 @@
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:text="Pay Using Card"
-        android:layout_below="@id/paytmbtn"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="20dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintVertical_bias="0.6"
         android:id="@+id/cardpay"
         android:background="@drawable/rectangle"
         />
@@ -47,4 +53,4 @@
 
 
 
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
