--- a/app/src/main/res/layout/card_view_for_cart.xml
+++ b/app/src/main/res/layout/card_view_for_cart.xml
@@ -11,11 +11,11 @@
         android:layout_width="350dp"
         android:layout_height="113dp"
         android:layout_centerInParent="true"
-       app:cardCornerRadius="15dp"
+        app:cardCornerRadius="15dp"
         android:layout_marginBottom="15dp"
         app:cardElevation="20dp"
         >
-        <RelativeLayout
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:padding="13dp"
@@ -27,29 +27,38 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="20dp"
                 android:id="@+id/itemtextcart"
-                android:layout_marginTop="20dp"
+                android:textColor="#fff"
                 android:text="HEY"
-                android:textSize="20dp"/>
+                android:textSize="20dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias=".05"
+                app:layout_constraintVertical_bias=".3"/>
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="20dp"
                 android:id="@+id/itempricecart"
-                android:layout_below="@id/itemtextcart"
                 android:text="Price"
                 android:textColor="#FF8330"
-                android:layout_marginTop="15dp"
-                android:textSize="15dp"/>
+                android:textSize="15dp"
+                app:layout_constraintTop_toBottomOf="@+id/itemtextcart"
+                app:layout_constraintLeft_toLeftOf="@+id/itemtextcart"
+                />
             <Button
                 android:id="@+id/subBcart"
                 android:layout_width="24dp"
                 android:layout_height="24dp"
-                android:layout_toRightOf="@id/itempricecart"
-                android:layout_marginLeft="168dp"
-                android:layout_marginTop="65dp"
                 android:background="@drawable/minusbtnm"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias=".99"
+                app:layout_constraintVertical_bias=".95"
                 />
 
             <Button
@@ -57,54 +66,58 @@
                 android:layout_width="24dp"
                 android:layout_height="24dp"
                 android:textSize="10dp"
-                android:layout_toRightOf="@id/quancart"
-                android:layout_marginLeft="8dp"
                 android:background="@drawable/plusbtnm"
-                android:layout_marginTop="65dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintRight_toLeftOf="@id/subBcart"
+                app:layout_constraintVertical_bias=".95"
+                android:layout_marginRight="30dp"
                 />
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="60dp"
                 android:textSize="20dp"
-                android:layout_marginLeft="200dp"
                 android:id="@+id/quancart"
                 android:textColor="#FF8330"
-                android:layout_toRightOf="@id/itempricecart"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintLeft_toRightOf="@id/addBcart"
+                app:layout_constraintRight_toLeftOf="@id/subBcart"
+                app:layout_constraintVertical_bias=".95"
                 android:text="00"/>
 
-<!--            <TextView-->
-<!--                android:layout_width="wrap_content"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:background="@drawable/pending1"-->
-<!--                android:layout_toRightOf="@id/itempricecart"-->
-<!--                android:layout_marginLeft="190dp"-->
-<!--                android:layout_marginTop="80dp"-->
-<!--                android:visibility="invisible"-->
-<!--                android:id="@+id/pendingvisual"/>-->
-<!--            <Button-->
-<!--                android:id="@+id/subB"-->
-<!--                android:layout_width="40dp"-->
-<!--                android:layout_height="40dp"-->
-<!--                android:layout_toRightOf="@id/itemprice"-->
-<!--                android:layout_marginLeft="130dp"-->
-<!--                android:layout_marginTop="70dp"-->
-<!--                android:text="-" />-->
+            <!--            <TextView-->
+            <!--                android:layout_width="wrap_content"-->
+            <!--                android:layout_height="wrap_content"-->
+            <!--                android:background="@drawable/pending1"-->
+            <!--                android:layout_toRightOf="@id/itempricecart"-->
+            <!--                android:layout_marginLeft="190dp"-->
+            <!--                android:layout_marginTop="80dp"-->
+            <!--                android:visibility="invisible"-->
+            <!--                android:id="@+id/pendingvisual"/>-->
+            <!--            <Button-->
+            <!--                android:id="@+id/subB"-->
+            <!--                android:layout_width="40dp"-->
+            <!--                android:layout_height="40dp"-->
+            <!--                android:layout_toRightOf="@id/itemprice"-->
+            <!--                android:layout_marginLeft="130dp"-->
+            <!--                android:layout_marginTop="70dp"-->
+            <!--                android:text="-" />-->
 
-<!--            <Button-->
-<!--                android:id="@+id/addB"-->
-<!--                android:layout_width="40dp"-->
-<!--                android:layout_height="40dp"-->
-<!--                android:layout_toRightOf="@id/itemprice"-->
-<!--                android:layout_marginLeft="190dp"-->
-<!--                android:layout_marginTop="70dp"-->
-<!--                android:text="+" />-->
-
-
+            <!--            <Button-->
+            <!--                android:id="@+id/addB"-->
+            <!--                android:layout_width="40dp"-->
+            <!--                android:layout_height="40dp"-->
+            <!--                android:layout_toRightOf="@id/itemprice"-->
+            <!--                android:layout_marginLeft="190dp"-->
+            <!--                android:layout_marginTop="70dp"-->
+            <!--                android:text="+" />-->
 
 
 
-        </RelativeLayout>
+
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
 
     </androidx.cardview.widget.CardView>
