--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="815dp"
+    android:layout_height="match_parent"
     android:id="@+id/cartfrag1"
     android:background="#292C32"
     tools:context=".CartFragment"
@@ -15,63 +15,67 @@
         android:layout_height="wrap_content"
         android:src="@drawable/cartnav"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginTop="17dp"
-        android:layout_marginLeft="40dp" />
-
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias=".1"
+        app:layout_constraintVertical_bias="0.04"
+        />
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_toRightOf="@id/cartfragimg"
         android:text="Cart"
         android:textColor="#FF8330"
         android:textSize="30dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginLeft="90dp"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toRightOf="@+id/cartfragimg"
+        app:layout_constraintVertical_bias="0.03"
         />
 
     <Button
         android:id="@+id/paybtn"
         android:layout_width="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:background="@drawable/rectangle"
-        android:layout_marginTop="7dp"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginRight="2dp"/>
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias=".9"
+        app:layout_constraintVertical_bias="0.03"
+        />
 
     <!--    <Button-->
-<!--        android:layout_width="150dp"-->
-<!--        android:textSize="20dp"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:text="Pay Now"-->
-<!--        android:layout_alignParentBottom="true"-->
-<!--        android:layout_centerHorizontal="true"-->
-<!--        android:id="@+id/paybtn"-->
-<!--        android:visibility="gone"-->
-<!--        android:layout_marginBottom="20dp"/>-->
+    <!--        android:layout_width="150dp"-->
+    <!--        android:textSize="20dp"-->
+    <!--        android:layout_height="wrap_content"-->
+    <!--        android:text="Pay Now"-->
+    <!--        android:layout_alignParentBottom="true"-->
+    <!--        android:layout_centerHorizontal="true"-->
+    <!--        android:id="@+id/paybtn"-->
+    <!--        android:visibility="gone"-->
+    <!--        android:layout_marginBottom="20dp"/>-->
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
         android:text="Pay"
         android:textColor="#FF8330"
         android:textSize="30dp"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginRight="65dp"
-        android:layout_marginTop="8dp"
+        app:layout_constraintLeft_toLeftOf="@+id/paybtn"
+        app:layout_constraintRight_toRightOf="@+id/paybtn"
+        app:layout_constraintTop_toTopOf="@+id/paybtn"
+        app:layout_constraintBottom_toBottomOf="@id/paybtn"
         />
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_viewcart"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/paybtn"
-
+        android:layout_height="match_parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginTop="70dp"
+        android:layout_marginBottom="50dp"
         tools:listitem="@layout/card_view" />
 
     <TextView
@@ -80,8 +84,10 @@
         android:id="@+id/total"
         android:visibility="gone"
         android:text="afsdfssdfs"
-        app:layout_constraintLeft_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         />
 
     <TextView
@@ -95,6 +101,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-    />
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
