--- a/app/src/main/res/layout/fragment_pending.xml
+++ b/app/src/main/res/layout/fragment_pending.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="#33383F"
-    android:layout_height="815dp"
+    android:layout_height="match_parent"
     tools:context=".PendingFrag">
 
     <ImageView
@@ -11,32 +12,44 @@
         android:layout_height="wrap_content"
         android:src="@drawable/pendingnav"
         android:id="@+id/profilefragimg"
-        android:layout_marginLeft="50dp"
-        android:layout_marginTop="20dp"/>
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias=".07"
+        app:layout_constraintVertical_bias=".04"
+
+        />
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Pending Orders"
         android:id="@+id/profilefragtext"
-       android:layout_centerHorizontal="true"
-        android:layout_marginTop="14dp"
-        android:layout_marginLeft="7dp"
         android:textSize="30dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintVertical_bias="0.031"
         android:textColor="#FF8330"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
-        android:layout_below="@id/profilefragimg"
-        android:layout_marginTop="30dp"
-        android:layout_height="wrap_content"
+        android:layout_marginTop="60dp"
+        android:layout_marginBottom="50dp"
+        android:layout_height="match_parent"
         android:id="@+id/recycler_pending"
         tools:listitem="@layout/card_view_for_pending"/>
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text=""
-        android:layout_centerInParent="true"
-        android:id="@+id/no_pending_orders"
-        />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:id="@+id/no_pending_orders"/>
 
-</RelativeLayout>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
