--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="#292C32"
     android:layout_height="match_parent"
     tools:context=".ProfileFrag">
@@ -11,29 +12,40 @@
         android:layout_width="35dp"
         android:layout_height="35dp"
         android:src="@drawable/profile"
-        android:layout_marginTop="25dp"
         android:id="@+id/profileicon"
-        android:layout_marginLeft="32dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintVertical_bias=".04"
+        app:layout_constraintHorizontal_bias=".04"
 
         />
     <TextView
         android:layout_width="105dp"
         android:layout_height="36dp"
         android:text="Profile"
-        android:layout_toRightOf="@id/profileicon"
-        android:layout_marginTop="24.5dp"
-        android:layout_marginLeft="20dp"
         android:textColor="#FF8330"
         android:textSize="30dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintVertical_bias=".04"
+        app:layout_constraintHorizontal_bias=".23"
         />
 
     <ImageView
         android:layout_width="135dp"
         android:layout_height="135dp"
         android:background="@drawable/circular"
-        android:layout_centerHorizontal="true"
         android:id="@+id/profileimage"
-        android:layout_marginTop="220dp">
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintVertical_bias=".4"
+        >
 
     </ImageView>
     <TextView
@@ -42,22 +54,26 @@
         android:text="M"
         android:id="@+id/profileimgname"
         android:textColor="#FFFFFF"
-        android:layout_marginTop="240dp"
-        android:layout_centerHorizontal="true"
         android:textSize="70dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintVertical_bias=".4"
 
-       />
+        />
     <TextView
         android:layout_width="wrap_content"
         android:id="@+id/profilename1"
-       android:layout_below="@id/profileimage"
-        android:layout_marginTop="18dp"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
         android:textSize="30dp"
         android:fontFamily="SF Pro Display"
         android:textColor="#FFFFFF"
-        android:text="@string/hello_blank_fragment" />
+        android:text="@string/hello_blank_fragment"
+        app:layout_constraintTop_toBottomOf="@+id/profileimage"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintVertical_bias=".5" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -65,9 +81,12 @@
         android:layout_below="@id/profilename1"
         android:textColor="#FFFFFF"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
         android:textSize="20dp"
-        android:text="2018B2A40733P"/>
+        android:text="2018B2A40733P"
+        app:layout_constraintTop_toBottomOf="@+id/profilename1"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintVertical_bias=".55" />
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -75,8 +94,10 @@
         android:textColor="#FF8330"
         android:background="@drawable/rectangle"
         android:id="@+id/logoutbtn"
-        android:layout_below="@id/profileid"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="100dp"/>
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/profileid"
+        app:layout_constraintEnd_toEndOf="parent"
+        />
 
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
