--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     android:id="@+id/splashscreen"
     tools:context=".SplashScreen"
+    android:alpha="0"
     android:background="@drawable/splashscreentest">
 
 
