--- a/app/src/main/res/layout/activity_pending.xml
+++ b/app/src/main/res/layout/activity_pending.xml
@@ -9,6 +9,7 @@
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
         android:id="@+id/recycler_for_pending"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
